make some solid changes

--- a/contact.html
+++ b/contact.html
@@ -48,15 +48,15 @@
             <div class="contact-details">
               <div class="contact-item">
                 <i class="fas fa-envelope"></i>
-                <span>Email: info@horabiomedical.com</span>
+                <span>Email: assist.hora@hotmail.com</span>
               </div>
               <div class="contact-item">
                 <i class="fas fa-phone"></i>
-                <span>Phone: +91 80 1234 5678</span>
+                <span>Phone: +91 8123742601</span>
               </div>
               <div class="contact-item">
                 <i class="fas fa-map-marker-alt"></i>
-                <span>Address: 123 Medical Ave, Bengaluru, Karnataka</span>
+                <span>Address: Bengaluru Urban - 560043, 9036724312</span>
               </div>
             </div>
           </div>
@@ -123,9 +123,9 @@
     <div class="footer-column">
       <h4>Contact</h4>
       <ul>
-        <li><i class="fas fa-map-marker-alt"></i> 123 Biomedical Ave, Science City</li>
-        <li><i class="fas fa-phone"></i> +1 (555) 123-4567</li>
-        <li><i class="fas fa-envelope"></i> info@horabiomedical.com</li>
+        <li><i class="fas fa-map-marker-alt"></i> Bengaluru Urban - 560043, 9036724312</li>
+        <li><i class="fas fa-phone"></i> +91 8123742601</li>
+        <li><i class="fas fa-envelope"></i> assist.hora@hotmail.com</li>
       </ul>
     </div>
   </div>
