--- a/services.html
+++ b/services.html
@@ -133,9 +133,9 @@
     <div class="footer-column">
       <h4>Contact</h4>
       <ul>
-        <li><i class="fas fa-map-marker-alt"></i> 123 Biomedical Ave, Science City</li>
-        <li><i class="fas fa-phone"></i> +1 (555) 123-4567</li>
-        <li><i class="fas fa-envelope"></i> info@horabiomedical.com</li>
+      <li><i class="fas fa-map-marker-alt"></i> Bengaluru Urban - 560043, 9036724312</li>
+        <li><i class="fas fa-phone"></i> 8123742601</li>
+        <li><i class="fas fa-envelope"></i>assit.hora@hotmail.com </li>
       </ul>
     </div>
   </div>
