--- a/team.html
+++ b/team.html
@@ -15,14 +15,20 @@
           <img src="./hora.png" alt="Logo" />
         </div>
         <ul class="nav-links">
-          <li><a href="#home">Home</a></li>
+          <!-- <li><a href="#home">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#services">Services</a></li>
           <li><a href="#">Medical Equipments</a></li>
           <li><a href="#contact">Contact</a></li>
           <li class="user-icon">
             <a href="#"><i class="fas fa-user"></i></a>
-          </li>
+          </li> -->
+           <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="products.html">Products</a></li>
+          <li><a href="team.html">Our Team</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
         <div class="hamburger">
           <i class="fas fa-bars"></i>
@@ -81,9 +87,9 @@
     <div class="footer-column">
       <h4>Contact</h4>
       <ul>
-        <li><i class="fas fa-map-marker-alt"></i> 123 Biomedical Ave, Science City</li>
-        <li><i class="fas fa-phone"></i> +1 (555) 123-4567</li>
-        <li><i class="fas fa-envelope"></i> info@horabiomedical.com</li>
+      <li><i class="fas fa-map-marker-alt"></i> Bengaluru Urban - 560043, 9036724312</li>
+        <li><i class="fas fa-phone"></i> 8123742601</li>
+        <li><i class="fas fa-envelope"></i>assit.hora@hotmail.com </li>
       </ul>
     </div>
   </div>
