chagen the heading

--- a/products.html
+++ b/products.html
@@ -47,8 +47,8 @@
 
         <section class="products-section">
             <div class="products-container">
-                <h1 class="section-title">Our Medical Equipment Products</h1>
-                <p class="section-subtitle">High-quality biomedical equipment for healthcare professionals</p>
+                <h1 class="section-title">Products</h1>
+                <!-- <p class="section-subtitle">High-quality biomedical equipment for healthcare professionals</p> -->
                 
                 <div class="sliders-container">
                     <!-- Slider 1 -->
