--- a/product-detail.html
+++ b/product-detail.html
@@ -16,14 +16,20 @@
                 <img src="./hora.png" alt="Logo" />
             </div>
             <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
+                <!-- <li><a href="index.html">Home</a></li>
                 <li><a href="index.html#about">About</a></li>
                 <li><a href="index.html#services">Services</a></li>
                 <li><a href="products.html" class="active">Medical Equipments</a></li>
                 <li><a href="index.html#contact">Contact</a></li>
                 <li class="user-icon">
                     <a href="#"><i class="fas fa-user"></i></a>
-                </li>
+                </li> -->
+                   <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="products.html">Products</a></li>
+          <li><a href="team.html">Our Team</a></li>
+          <li><a href="contact.html">Contact</a></li>
             </ul>
             <div class="hamburger">
                 <i class="fas fa-bars"></i>
