--- a/contact.html
+++ b/contact.html
@@ -128,6 +128,13 @@
         <li><i class="fas fa-envelope"></i> assist.hora@hotmail.com</li>
       </ul>
     </div>
+
+
+     <div class="footer-column">
+      <h4>Location</h4>
+      <img src="./horaqr.png" alt="">
+    
+    </div>
   </div>
   
   <div class="footer-bottom">
