--- a/products.html
+++ b/products.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Medical Equipment Products | HORA Biomedical Systems</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="css/products.css" />
+    <!-- <link rel="stylesheet" href="css/products.css" /> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" />
@@ -155,6 +155,12 @@
         <li><i class="fas fa-envelope"></i>assit.hora@hotmail.com </li>
                 </ul>
             </div>
+
+             <div class="footer-column">
+      <h4>Location</h4>
+      <img src="./horaqr.png" alt="">
+    
+    </div>
         </div>
         
         <div class="footer-bottom">
