--- a/services.html
+++ b/services.html
@@ -138,6 +138,12 @@
         <li><i class="fas fa-envelope"></i>assit.hora@hotmail.com </li>
       </ul>
     </div>
+
+     <div class="footer-column">
+      <h4>Location</h4>
+      <img src="./horaqr.png" alt="">
+    
+    </div>
   </div>
   
   <div class="footer-bottom">
