make home page h3 headig eidt in  responsive

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
             <div class="part3">Biomedical Excellence</div>
           </h1>
           <div class="about-links">
-            <a href="products.html" class="about-link">Products</a>
-            <a href="testimonial.html" class="about-link">Client Testimonials</a>
+            <a href="#product-de" class="about-link">Products</a>
+            <a href="contact.html" class="about-link">Contact Us</a>
           </div>
         </div>
         <div class="hero-image">
@@ -88,7 +88,7 @@
         </div>
       </section>
 
-      <section class="products-section">
+      <section class="products-section" id="product-de">
             <div class="products-container">
                 <h1 class="section-title">Products</h1>
                 <!-- <p class="section-subtitle">High-quality biomedical equipment for healthcare professionals</p> -->
