--- a/index.html
+++ b/index.html
@@ -331,13 +331,19 @@
    
     
     <div class="footer-column">
-      <h4>Contact</h4>
-      <ul>
-        <li><i class="fas fa-map-marker-alt"></i> Bengaluru Urban - 560043, 9036724312</li>
-        <li><i class="fas fa-phone"></i> 8123742601</li>
-        <li><i class="fas fa-envelope"></i>assit.hora@hotmail.com </li>
-      </ul>
-    </div>
+  <h4>Contact</h4>
+  <ul>
+    <li>
+      <i class="fas fa-map-marker-alt"></i> 
+      <span>Bengaluru Urban - </span>
+      <a href="https://g.co/kgs/f1ymNWx" target="_blank" rel="noopener noreferrer" class="map-link">
+        View Location
+      </a>
+    </li>
+    <li><i class="fas fa-phone"></i> <a href="tel:+918123742601">8123742601</a></li>
+    <li><i class="fas fa-envelope"></i> <a href="mailto:assit.hora@hotmail.com">assit.hora@hotmail.com</a></li>
+  </ul>
+</div>
 
       <div class="footer-column">
       <h4>Location</h4>
@@ -352,6 +358,14 @@
     <p>&copy; 2023 HORA Biomedical Systems. All rights reserved.</p>
   </div>
 </footer>
+
+<div class="whatsapp-float">
+<a href="https://wa.me/919036724312" target="_blank" aria-label="Chat on WhatsApp" class="whatsapp-link">
+
+    <i class="fab fa-whatsapp"></i>
+    <span class="tooltip">Chat with us</span>
+  </a>
+</div>
 
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
