--- a/product-detail.html
+++ b/product-detail.html
@@ -149,11 +149,11 @@
           </ul>
         </div>
 
-        <div class="footer-column">
+        <!-- <div class="footer-column">
           <h4>Location</h4>
           <img src="./horaqr.png" alt="" />
         </div>
-      </div>
+      </div> -->
 
       <div class="footer-bottom">
         <p>&copy; 2023 HORA Biomedical Systems. All rights reserved.</p>
