--- a/team.html
+++ b/team.html
@@ -99,11 +99,11 @@
       </ul>
     </div>
 
-      <div class="footer-column">
+      <!-- <div class="footer-column">
       <h4>Location</h4>
       <img src="./horaqr.png" alt="">
     
-    </div>
+    </div> -->
 
 
   </div>
