removed the detail page commendted

--- a/index.html
+++ b/index.html
@@ -75,8 +75,10 @@
         <div class="info-item">
           <div class="icon country-offices-icon"></div>
           <div class="info-text">
-            <span class="number">8+</span>
-            <span class="description">COUNTRY OFFICES</span>
+            <span class="number"> </span>
+            <span class="description"> 
+        all over india
+      </span>
           </div>
         </div>
         <div class="info-item">
@@ -96,7 +98,7 @@
                 <div class="product-categories">
                     <div class="category-filter">
                         <!-- <button class="filter-btn " data-category="all">   <a href="product-detail.html?id=1">All Products</a></button> -->
-                        <button class="filter-btn" data-category="icu-equipment">  <a href="product-detail.html?id=1">ICU Equipments</a></button>
+                        <!-- <button class="filter-btn" data-category="icu-equipment">  <a href="product-detail.html?id=1">ICU Equipments</a></button>
                         <button class="filter-btn" data-category="icu-equipment">  <a href="product-detail.html?id=2">CSSD Equipments</a></button>
                         <button class="filter-btn" data-category="icu-equipment">  <a href="product-detail.html?id=3">Medical Accessories</a></button>
                         <button class="filter-btn" data-category="icu-equipment">  <a href="product-detail.html?id=4">Rental Medical Equipment</a></button>
@@ -120,7 +122,30 @@
                         <button class="filter-btn" data-category="homecare"> <a href="product-detail.html?id=11"> Home care support</a></button>
                         <button class="filter-btn" data-category="modular">  <a href="product-detail.html?id=12"> Modular Operation Theatre</a></button>
                         <button class="filter-btn" data-category="radiology"> <a href="product-detail.html?id=13"> Radiology Equipments </a></button>
-                        <button class="filter-btn" data-category="medical-gas"> <a href="product-detail.html?id=14"> Medical Gas Pipeline </a></button>
+                        <button class="filter-btn" data-category="medical-gas"> <a href="product-detail.html?id=14"> Medical Gas Pipeline </a></button> -->
+
+
+
+
+
+
+                        <button class="filter-btn" data-category="icu-equipment">ICU Equipments</button>
+<button class="filter-btn" data-category="icu-equipment">CSSD Equipments</button>
+<button class="filter-btn" data-category="icu-equipment">Medical Accessories</button>
+<button class="filter-btn" data-category="icu-equipment">Rental Medical Equipment</button>
+
+<button class="filter-btn" data-category="nicu-equip">NICU Equipments</button>
+<button class="filter-btn" data-category="hospital-furn">Hospital Furnitures</button>
+<button class="filter-btn" data-category="medical-consum">Medical Consumables</button>
+<button class="filter-btn" data-category="biomedical">Biomedical Service Contract</button>
+<button class="filter-btn" data-category="ot-equip">OT Equipments</button>
+
+<button class="filter-btn" data-category="turnkey">Turnkey Projects</button>
+<button class="filter-btn" data-category="homecare">Home care support</button>
+<button class="filter-btn" data-category="modular">Modular Operation Theatre</button>
+<button class="filter-btn" data-category="radiology">Radiology Equipments</button>
+<button class="filter-btn" data-category="medical-gas">Medical Gas Pipeline</button>
+
                     </div>
                 </div>
 
@@ -220,9 +245,9 @@
               <h3>Procurement & Supply</h3>
               <p>High-quality biomedical equipment including:</p>
               <ul class="service-list">
-                <li>X-ray machines</li>
-                <li>MRI, CT, ultrasound, ECG machines</li>
-                <li>Laboratory equipment and diagnostics tools</li>
+                <li>icu equipments</li>
+                <li>medicall accessories</li>
+                <li>radiology equipments</li>
               </ul>
             </div>
 
@@ -335,9 +360,23 @@
   <ul>
     <li>
       <i class="fas fa-map-marker-alt"></i> 
-      <span>Bengaluru Urban - </span>
+      <span>No. 06, Third Floor, Police Station,</span>
+    </li>
+    <li>
+      <span class="address-line">1st Cross Rd, behind Hennur,</span>
+    </li>
+    <li>
+      <span class="address-line">Balachandra Layout, Babusapalya,</span>
+    </li>
+    <li>
+      <span class="address-line">HRBR Block, Kalyan Nagar,</span>
+    </li>
+    <li>
+      <span class="address-line">Bengaluru, Karnataka 560043</span>
+    </li>
+    <li>
       <a href="https://g.co/kgs/f1ymNWx" target="_blank" rel="noopener noreferrer" class="map-link">
-        View Location
+        <i class="fas fa-map-marked-alt"></i> View on Map
       </a>
     </li>
     <li><i class="fas fa-phone"></i> <a href="tel:+918123742601">8123742601</a></li>
