--- a/services.html
+++ b/services.html
@@ -44,7 +44,7 @@
               <h3>Procurement & Supply</h3>
               <p>High-quality biomedical equipment including:</p>
               <ul class="service-list">
-                <li>X-ray machines</li>
+                <li>X-ray machine</li>
                 <li>MRI, CT, ultrasound, ECG machines</li>
                 <li>Laboratory equipment and diagnostics tools</li>
               </ul>
