--- a/index.html
+++ b/index.html
@@ -334,10 +334,10 @@
       <h3>HORA Biomedical Systems</h3>
       <p>Your Partner in Biomedical Excellence</p>
       <div class="social-icons">
-        <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://www.facebook.com/share/1AT7uXyWky/" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
         <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-        <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-        <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/hora-biomedicls-1029a9367" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+        <a href="https://www.instagram.com/hora_biomedical_systems?igsh=NHFpMG52c2QwaXYx" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
       </div>
     </div>
 
