--- a/services.html
+++ b/services.html
@@ -109,14 +109,14 @@
 
  <footer class="footer">
   <div class="footer-container">
-   <div class="footer-column">
+  <div class="footer-column">
       <h3>HORA Biomedical Systems</h3>
       <p>Your Partner in Biomedical Excellence</p>
       <div class="social-icons">
-        <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://www.facebook.com/share/1AT7uXyWky/" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
         <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-        <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-        <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/hora-biomedicls-1029a9367" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+        <a href="https://www.instagram.com/hora_biomedical_systems?igsh=NHFpMG52c2QwaXYx" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
       </div>
     </div>
 
@@ -134,14 +134,34 @@
     
    
     
-    <div class="footer-column">
-      <h4>Contact</h4>
-      <ul>
-        <li><i class="fas fa-map-marker-alt"></i> Bengaluru Urban - 560043, 9036724312</li>
-        <li><i class="fas fa-phone"></i> 8123742601</li>
-        <li><i class="fas fa-envelope"></i>assit.hora@hotmail.com </li>
-      </ul>
-    </div>
+   <div class="footer-column">
+  <h4>Contact</h4>
+  <ul>
+    <li>
+      <i class="fas fa-map-marker-alt"></i> 
+      <span>No. 06, Third Floor, Police Station,</span>
+    </li>
+    <li>
+      <span class="address-line">1st Cross Rd, behind Hennur,</span>
+    </li>
+    <li>
+      <span class="address-line">Balachandra Layout, Babusapalya,</span>
+    </li>
+    <li>
+      <span class="address-line">HRBR Block, Kalyan Nagar,</span>
+    </li>
+    <li>
+      <span class="address-line">Bengaluru, Karnataka 560043</span>
+    </li>
+    <li>
+      <a href="https://g.co/kgs/f1ymNWx" target="_blank" rel="noopener noreferrer" class="map-link">
+        <i class="fas fa-map-marked-alt"></i> View on Map
+      </a>
+    </li>
+    <li><i class="fas fa-phone"></i> <a href="tel:+918123742601">8123742601</a></li>
+    <li><i class="fas fa-envelope"></i> <a href="mailto:assit.hora@hotmail.com">assit.hora@hotmail.com</a></li>
+  </ul>
+</div>
 
       <!-- <div class="footer-column">
       <h4>Location</h4>
