--- a/about.html
+++ b/about.html
@@ -109,7 +109,7 @@
         <i class="fas fa-map-marked-alt"></i> View on Map
       </a>
     </li>
-    <li><i class="fas fa-phone"></i> <a href="tel:+918123742601">8123742601</a></li>
+    <li><i class="fas fa-phone"></i> <a href="tel:+91 80 3153 4984">80 3153 4984</a></li>
     <li><i class="fas fa-envelope"></i> <a href="mailto:assit.hora@hotmail.com">assit.hora@hotmail.com</a></li>
   </ul>
 </div>
