--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <!-- <li><a href="services.html">Services</a></li> -->
           <li><a href="#services">Services</a></li>
 
-          <!-- <li><a href="products.html">Products</a></li> -->
+          <li><a href="#product-de">Products</a></li>
           <li><a href="team.html">Our Team</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
@@ -379,7 +379,7 @@
         <i class="fas fa-map-marked-alt"></i> View on Map
       </a>
     </li>
-    <li><i class="fas fa-phone"></i> <a href="tel:+918123742601">8123742601</a></li>
+    <li><i class="fas fa-phone"></i> <a href="tel:+91 80 3153 4984">80 3153 4984</a></li>
     <li><i class="fas fa-envelope"></i> <a href="mailto:assit.hora@hotmail.com">assit.hora@hotmail.com</a></li>
   </ul>
 </div>
