add new changed

--- a/about.html
+++ b/about.html
@@ -79,6 +79,8 @@
         <li><a href="about.html">About</a></li>
         <li><a href="services.html">Services</a></li>
         <!-- <li><a href="products.html">Products</a></li> -->
+        <li><a href="#product-de">Products</a></li>
+
       </ul>
     </div>
     
