--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="services.html" class="active">Services</a></li>
-          <!-- <li><a href="products.html">Products</a></li> -->
+          <li><a href="products.html">Products</a></li> 
           <li><a href="team.html">Our Team</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
@@ -122,6 +122,8 @@
         <li><a href="about.html">About</a></li>
         <li><a href="services.html">Services</a></li>
         <!-- <li><a href="products.html">Products</a></li> -->
+        <li><a href="#product-de">Products</a></li>
+
       </ul>
     </div>
     
