--- a/team.html
+++ b/team.html
@@ -28,7 +28,7 @@
            <li><a href="index.html" class="active">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="services.html">Services</a></li>
-          <!-- <li><a href="products.html">Products</a></li> -->
+          <li><a href="products.html">Products</a></li>
           <li><a href="team.html">Our Team</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
@@ -83,7 +83,9 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="services.html">Services</a></li>
+        
         <li><a href="products.html">Products</a></li>
+
       </ul>
     </div>
     
