--- a/team.html
+++ b/team.html
@@ -137,7 +137,13 @@
 
   
   <!-- Include your footer -->
-      <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
+    <script src="script.js"></script>
+    <script src="products.js"></script>  
+    <script src="renderProduct.js"></script>
+    <script src="product-detail.js"></script> -->
+     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
     <script src="script.js"></script>
     <script src="products.js"></script>  
