--- a/products.html
+++ b/products.html
@@ -69,13 +69,27 @@
                         <button class="filter-btn" data-category="modular">  <a href="product-detail.html?id=12"> Modular Operation Theatre</a></button>
                         <button class="filter-btn" data-category="radiology"> <a href="product-detail.html?id=13"> Radiology Equipments </a></button>
                         <button class="filter-btn" data-category="medical-gas"> <a href="product-detail.html?id=14"> Medical Gas Pipeline </a></button> -->
+<button class="filter-btn" data-category="turnkey">Turnkey Projects</button>
+<button class="filter-btn" data-category="modular">Modular Operation Theatre</button>
+<button class="filter-btn" data-category="icu-equipment">ICU Equipments</button>
+<button class="filter-btn" data-category="nicu-equip">NICU Equipments</button>
+<button class="filter-btn" data-category="radiology">Radiology Equipments</button>
+<button class="filter-btn" data-category="medical-gas">Medical Gas Pipeline</button>
+<button class="filter-btn" data-category="ot-equip">OT Equipments</button>
+<button class="filter-btn" data-category="icu-equipment">CSSD Equipments</button>
+<button class="filter-btn" data-category="medical-consum">Medical Consumables</button>
+<button class="filter-btn" data-category="icu-equipment">Medical Accessories</button>
+<button class="filter-btn" data-category="biomedical">Biomedical Service Contract</button>
+<button class="filter-btn" data-category="homecare">Home care support</button>
+<button class="filter-btn" data-category="icu-equipment">Rental Medical Equipment</button>
+<button class="filter-btn" data-category="hospital-furn">Hospital Furnitures</button>
 
 
 
 
 
 
-                        <button class="filter-btn" data-category="icu-equipment">ICU Equipments</button>
+<!-- <button class="filter-btn" data-category="icu-equipment">ICU Equipments</button>
 <button class="filter-btn" data-category="icu-equipment">CSSD Equipments</button>
 <button class="filter-btn" data-category="icu-equipment">Medical Accessories</button>
 <button class="filter-btn" data-category="icu-equipment">Rental Medical Equipment</button>
@@ -90,7 +104,7 @@
 <button class="filter-btn" data-category="homecare">Home care support</button>
 <button class="filter-btn" data-category="modular">Modular Operation Theatre</button>
 <button class="filter-btn" data-category="radiology">Radiology Equipments</button>
-<button class="filter-btn" data-category="medical-gas">Medical Gas Pipeline</button>
+<button class="filter-btn" data-category="medical-gas">Medical Gas Pipeline</button> -->
 
                     </div>
                 </div>
