make some icons add

--- a/index.html
+++ b/index.html
@@ -68,16 +68,18 @@
         <div class="info-item">
           <div class="icon years-in-business-icon"></div>
           <div class="info-text">
-            <span class="number">7+</span>
+            <span class="number">5+</span>
             <span class="description">YEARS IN BUSINESS</span>
           </div>
         </div>
         <div class="info-item">
-          <div class="icon country-offices-icon"></div>
+          <!-- <div class="icon country-offices-icon"></div> -->
+          <div class="fas fa-wrench"></div>
           <div class="info-text">
             <span class="number"> </span>
             <span class="description"> 
-        all over india
+        highly qualified team</span>
+          </div>
       </span>
           </div>
         </div>
