--- a/index.html
+++ b/index.html
@@ -128,10 +128,26 @@
 
 
 
+<button class="filter-btn" data-category="turnkey">Turnkey Projects</button>
+<button class="filter-btn" data-category="modular">Modular Operation Theatre</button>
+<button class="filter-btn" data-category="icu-equipment">ICU Equipments</button>
+<button class="filter-btn" data-category="nicu-equip">NICU Equipments</button>
+<button class="filter-btn" data-category="radiology">Radiology Equipments</button> 
+<button class="filter-btn" data-category="hospital-furn">Hospital Furnitures</button>
+<button class="filter-btn" data-category="medical-gas">Medical Gas Pipeline</button>
+<button class="filter-btn" data-category="ot-equip">OT Equipments</button>
+<button class="filter-btn" data-category="icu-equipment">CSSD Equipments</button>
+<button class="filter-btn" data-category="medical-consum">Medical Consumables</button>
+<button class="filter-btn" data-category="icu-equipment">Medical Accessories</button>
+<button class="filter-btn" data-category="biomedical">Biomedical Service Contract</button>
+<button class="filter-btn" data-category="homecare">Home care support</button>
+<button class="filter-btn" data-category="icu-equipment">Rental Medical Equipment</button>
 
 
 
-                        <button class="filter-btn" data-category="icu-equipment">ICU Equipments</button>
+
+
+<!-- <button class="filter-btn" data-category="icu-equipment">ICU Equipments</button>
 <button class="filter-btn" data-category="icu-equipment">CSSD Equipments</button>
 <button class="filter-btn" data-category="icu-equipment">Medical Accessories</button>
 <button class="filter-btn" data-category="icu-equipment">Rental Medical Equipment</button>
@@ -146,7 +162,7 @@
 <button class="filter-btn" data-category="homecare">Home care support</button>
 <button class="filter-btn" data-category="modular">Modular Operation Theatre</button>
 <button class="filter-btn" data-category="radiology">Radiology Equipments</button>
-<button class="filter-btn" data-category="medical-gas">Medical Gas Pipeline</button>
+<button class="filter-btn" data-category="medical-gas">Medical Gas Pipeline</button> -->
 
                     </div>
                 </div>
