--- a/about.html
+++ b/about.html
@@ -112,7 +112,7 @@
       </a>
     </li>
     <li><i class="fas fa-phone"></i> <a href="tel:+91 80 3153 4984">80 3153 4984</a></li>
-    <li><i class="fas fa-envelope"></i> <a href="mailto:assit.hora@hotmail.com">assit.hora@hotmail.com</a></li>
+    <li><i class="fas fa-envelope"></i> <a href="mailto:assit.hora@hotmail.com">assist.hora@hotmail.com</a></li>
   </ul>
 </div>
 
