--- a/products.html
+++ b/products.html
@@ -82,7 +82,7 @@
 <button class="filter-btn" data-category="medical-consum">Medical Consumables</button>
 <button class="filter-btn" data-category="icu-equipment">Medical Accessories</button>
 <button class="filter-btn" data-category="biomedical">Biomedical Service Contract</button>
-<button class="filter-btn" data-category="homecare">Home care support</button>
+<button class="filter-btn" data-category="homecare">Smart Home care support</button>
 <button class="filter-btn" data-category="icu-equipment">Rental Medical Equipment</button>
 
 
