--- a/team.html
+++ b/team.html
@@ -54,8 +54,14 @@
             We are a qualified and passionate team committed to empowering healthcare through dependable biomedical services. Our engineers and support professionals bring years of experience and dedication to every project.
           </p>
           
-          <div class="team-grid">
-            <!-- Team member cards would go here -->
+     
+
+           <div class="careers-section">
+            <h3>Join Our Team</h3>
+            <p>We're always looking for talented individuals to join our growing team. Explore exciting career opportunities at HORA Biomedical Systems.</p>
+            <a href="joincontact.html" class="careers-btn">
+              <i class="fas fa-briefcase"></i> View Career Opportunities
+            </a>
           </div>
         </div>
       </div>
