make new changes to the address

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
               <h3>Installation & Setup</h3>
               <ul class="service-list">
                 <li>Hospital and clinic installations</li>
-                <li>Proper training for healthcare staff</li>
+                <li>Proper training for end users</li>
               </ul>
             </div>
 
@@ -378,19 +378,21 @@
   <ul>
     <li>
       <i class="fas fa-map-marker-alt"></i> 
-      <span>No. 06, Third Floor, Police Station,</span>
+      <span>
+HORA BIOMEDICAL SYSTEMS
+,</span>
     </li>
     <li>
-      <span class="address-line">1st Cross Rd, behind Hennur,</span>
+      <span class="address-line">3rd Floor 06 1st Cross Behind Hennur Police Station,</span>
     </li>
     <li>
       <span class="address-line">Balachandra Layout, Babusapalya,</span>
     </li>
     <li>
-      <span class="address-line">HRBR Block, Kalyan Nagar,</span>
+      <span class="address-line">HRBR Block,</span>
     </li>
     <li>
-      <span class="address-line">Bengaluru, Karnataka 560043</span>
+      <span class="address-line">Bengaluru Urban - 560043</span>
     </li>
     <li>
       <a href="https://g.co/kgs/f1ymNWx" target="_blank" rel="noopener noreferrer" class="map-link">
