--- a/about.html
+++ b/about.html
@@ -92,19 +92,21 @@
   <ul>
     <li>
       <i class="fas fa-map-marker-alt"></i> 
-      <span>No. 06, Third Floor, Police Station,</span>
+      <span>
+HORA BIOMEDICAL SYSTEMS
+,</span>
     </li>
     <li>
-      <span class="address-line">1st Cross Rd, behind Hennur,</span>
+      <span class="address-line">3rd Floor 06 1st Cross Behind Hennur Police Station,</span>
     </li>
     <li>
       <span class="address-line">Balachandra Layout, Babusapalya,</span>
     </li>
     <li>
-      <span class="address-line">HRBR Block, Kalyan Nagar,</span>
+      <span class="address-line">HRBR Block,</span>
     </li>
     <li>
-      <span class="address-line">Bengaluru, Karnataka 560043</span>
+      <span class="address-line">Bengaluru Urban - 560043</span>
     </li>
     <li>
       <a href="https://g.co/kgs/f1ymNWx" target="_blank" rel="noopener noreferrer" class="map-link">
