--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>HORA Biomedical Systems - Home</title>
     <link rel="icon" href="./hora.png" type="image/x-icon" />
     <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="android-chrome-192x192.png" type="image/png">
 
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
