--- a/products.html
+++ b/products.html
@@ -227,7 +227,7 @@ HORA BIOMEDICAL SYSTEMS
 ,</span>
     </li>
     <li>
-      <span class="address-line">3rd Floor 06 1st Cross Behind Hennur Police Station,</span>
+      <span class="address-line">3rd Floor 06 1st Cross </span>
     </li>
     <li>
       <span class="address-line">Balachandra Layout, Babusapalya,</span>
@@ -236,7 +236,7 @@ HORA BIOMEDICAL SYSTEMS
       <span class="address-line">HRBR Block,</span>
     </li>
     <li>
-      <span class="address-line">Bengaluru Urban - 560043</span>
+      <span class="address-line">Bengaluru Urban - 560043 Karnataka</span>
     </li>
     <li>
       <a href="https://g.co/kgs/f1ymNWx" target="_blank" rel="noopener noreferrer" class="map-link">
