--- a/team.html
+++ b/team.html
@@ -60,7 +60,7 @@
             <h3>Join Our Team</h3>
             <p>We're always looking for talented individuals to join our growing team. Explore exciting career opportunities at HORA Biomedical Systems.</p>
             <a href="joincontact.html" class="careers-btn">
-              <i class="fas fa-briefcase"></i> View Career Opportunities
+              <i class="fas fa-briefcase"></i> share your resume
             </a>
           </div>
         </div>
@@ -108,7 +108,7 @@ HORA BIOMEDICAL SYSTEMS
 ,</span>
     </li>
     <li>
-      <span class="address-line">3rd Floor 06 1st Cross Behind Hennur Police Station,</span>
+      <span class="address-line">3rd Floor 06 1st Cross </span>
     </li>
     <li>
       <span class="address-line">Balachandra Layout, Babusapalya,</span>
@@ -117,7 +117,7 @@ HORA BIOMEDICAL SYSTEMS
       <span class="address-line">HRBR Block,</span>
     </li>
     <li>
-      <span class="address-line">Bengaluru Urban - 560043</span>
+      <span class="address-line">Bengaluru Urban - 560043 Karnataka</span>
     </li>
     <li>
       <a href="https://g.co/kgs/f1ymNWx" target="_blank" rel="noopener noreferrer" class="map-link">
