--- a/products.html
+++ b/products.html
@@ -7,7 +7,7 @@
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bigshot+One&family=Cal+Sans&family=Pacifico&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bigshot+One&family=Cal+Sans&family=Pacifico&display=swap" rel="stylesheet"> -->
     <title>Document</title>
 </head>
 <body>
@@ -197,7 +197,13 @@
       <p>Your Partner in Biomedical Excellence</p>
       <div class="social-icons">
         <a href="https://www.facebook.com/share/1AT7uXyWky/" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-        <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+        <!-- <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a> -->
+         <a href="#" aria-label="X (formerly Twitter)">
+  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="white" viewBox="0 0 1200 1227">
+    <path d="M1175.6 1.5H962.1L598.2 486.6 234.6 1.5H1L480 626.3 1 1225.5h213.7l368.1-504.5 366.3 504.5h213.9L718.4 626.3z"/>
+  </svg>
+</a>
+
         <a href="https://www.linkedin.com/in/hora-biomedicls-1029a9367" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
         <a href="https://www.instagram.com/hora_biomedical_systems?igsh=NHFpMG52c2QwaXYx" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
       </div>
